/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.0.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.16' // fix slf4j warning

    
    implementation 'io.github.ollama4j:ollama4j:1.1.4' // ollama4j lib
    implementation 'org.apache.pdfbox:pdfbox:3.0.3' // apache pdfbox lib
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // to use java21 since i can't somewhat fix some issues in java25
    }
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml']  // for GUI
}

application {
    mainClass = 'javaollama.JavaLlamaGui'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading', '-Xshare:off') // fix mockito warning on java 21 & suppress sharing warning
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}
